--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://ik.imagekit.io/nx2mu5rdoc/dummy/logo.png?updatedAt=1755851279804">
   <title>ISIDL-2025 Symposium</title>
  <style>
     :root {
