--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 
 <ol>
 <li>
-    Prof. Manu Malek – Retired Professor of Computer Science and Telecom Management
+    Prof. Manu Malek – Professor, Stevens Institute of Technology, New Jersey, USA 
   </li>
   <li>
     Prof. Utku Köse – Full Professor, Süleyman Demirel University, Turkey. 
@@ -376,4 +376,5 @@
 </body>
 
 </html>
+
 
