--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
           </tr>
           <tr>
             <td>Final Paper Due</td>
-            <td>31<sup>st</sup> July 2025</td>
+            <td>28<sup>st</sup> august 2025</td>
           </tr>
         </table>
       </fieldset>
@@ -319,6 +319,20 @@
     </section>
 
     <section class="committee">
+      <h2>Editors of proceedings</h2>
+
+<ol>
+<li>
+    Prof. Aditya Khamparia – Department of Computer Science, Babasaheb Bhimrao Ambedkar University, Central University, Lucknow, UP, India 
+  </li>
+  <li>
+    Utku Kose - University of North Dakota, USA 
+  </li>
+  <li>
+   Anupam Kumar - Department of Computer Science and Engineering, Maharaja Agrasen Institute of Technology, Delhi, India 
+  </li>
+  
+</ol>
       <h2>TPC Chair</h2>
 
 <ol>
@@ -376,5 +390,6 @@
 </body>
 
 </html>
+
 
 
