Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
           </tr>
           <tr>
             <td>Final Paper Due</td>
-            <td>28<sup>st</sup> august 2025</td>
+            <td>2<sup>st</sup> august 2025</td>
           </tr>
         </table>
       </fieldset>
@@ -326,10 +326,10 @@
     Prof. Aditya Khamparia – Department of Computer Science, Babasaheb Bhimrao Ambedkar University, Central University, Lucknow, UP, India 
   </li>
   <li>
-    Utku Kose - University of North Dakota, USA 
+    Prof. Utku Kose - University of North Dakota, USA 
   </li>
   <li>
-   Anupam Kumar - Department of Computer Science and Engineering, Maharaja Agrasen Institute of Technology, Delhi, India 
+   Prof. Anupam Kumar - Department of Computer Science and Engineering, Maharaja Agrasen Institute of Technology, Delhi, India 
   </li>
   
 </ol>
@@ -343,8 +343,7 @@
     Prof. Utku Köse – Full Professor, Süleyman Demirel University, Turkey. 
   </li>
   <li>
-    Prof. Oscar Castillo – Full Professor of Computer Science, 
-    Tijuana Institute of Technology, Mexico. 
+    Prof. Oscar Castillo – Full Professor of Computer Science, Tijuana Institute of Technology, Mexico. 
   </li>
   
 </ol>
@@ -390,6 +389,7 @@
 </body>
 
 </html>
+
 
 
 
