Update symposium details in index.html
Added date and organizing information for the symposium.

--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
 
   <main>
     <h1>International Symposium on Intelligent, Secure, and Deep Learning Systems (ISIDL-2025)</h1>
+    <h3>Date - 28<sup>th</sup> - 29<sup>th</sup> August 2025</h3>
+    <h3>Organised by - Maharaja Agrasen Institute of Technology, Delhi, India</h3>
 
     <section>
       <h2>About the Symposium</h2>
@@ -301,7 +303,7 @@
           </tr>
           <tr>
             <td>Final Paper Due</td>
-            <td>2<sup>st</sup> august 2025</td>
+            <td>31<sup>st</sup> july 2025</td>
           </tr>
         </table>
       </fieldset>
@@ -389,6 +391,7 @@
 </body>
 
 </html>
+
 
 
 
