centered date and org.name

--- a/index.html
+++ b/index.html
@@ -78,6 +78,13 @@
       z-index: 9999;
     }
 
+   .heading_date{
+     text-align: center;
+   }
+   .heading_organised{
+     text-align: center;
+   }
+
     .spinner {
       border: 6px solid var(--secondary-bg);
       border-top: 6px solid var(--accent);
@@ -256,8 +263,8 @@
 
   <main>
     <h1>International Symposium on Intelligent, Secure, and Deep Learning Systems (ISIDL-2025)</h1>
-    <h3>Date - 28<sup>th</sup> - 29<sup>th</sup> August 2025</h3>
-    <h3>Organised by - Maharaja Agrasen Institute of Technology, Delhi, India</h3>
+    <h3 class="heading_date">Date - 28<sup>th</sup> - 29<sup>th</sup> August 2025</h3>
+    <h3 class="heading_organised">Organised by - Maharaja Agrasen Institute of Technology, Delhi, India</h3>
 
     <section>
       <h2>About the Symposium</h2>
@@ -391,6 +398,7 @@
 </body>
 
 </html>
+
 
 
 
