Enhance styles with new accent color and heading updates
Added a new CSS variable for accent color and updated styles for headings to improve visual hierarchy.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       --table-header: #38bdf8;
       --table-header-text: #0f172a;
       --fieldset-border: #38bdf8;
+      --accent2: #FCDBBB;
     }
 
     * {
@@ -80,9 +81,12 @@
 
    .heading_date{
      text-align: center;
+     color: var(--accent2);
    }
    .heading_organised{
      text-align: center;
+     color: var(--accent2);
+     padding-top : 5px;
    }
 
     .spinner {
@@ -398,9 +402,5 @@
 </body>
 
 </html>
-
-
-
-
 
 
